tests/ui/fail/trait_generics.rs
use extern_trait::extern_trait;

#[extern_trait(BadProxy)]
trait Bad<T> {
    fn new(v: T) -> Self;
}

fn main() {}
