tests/ui/fail/trait_generics.stderr
error: #[extern_trait] may not have generics
 --> tests/ui/fail/trait_generics.rs:4:10
  |
4 | trait Bad<T> {
  |          ^^^
